# xnn

./: .gitignore  LICENSE  Makefile  README.md  justfile
nn4c/: Makefile  build.zig  dataset.c  main.c  model.c  utils.c
nn4c/inc/: utils.h
nn4c/include/: dataset.h  model.h
nn4numpy/: main.py  model.py  pyproject.toml  utils.py
nn4py/: dataset.py  main.py  model.py
nn4torch/: dataset.py  main.py  model.py  pyproject.toml
